--- a/pseudo.html
+++ b/pseudo.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pseudo</title>
+    <style>
+        h1{
+            color: brown;
+        }
+        h1:hover{
+            color: blueviolet;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>this page is normal</h1>
 </body>
 </html>
