--- a/pseudo.html
+++ b/pseudo.html
@@ -10,10 +10,20 @@
         }
         h1:hover{
             color: blueviolet;
+            background-color: skyblue;
+            padding: 1%;
+        }
+        .middle-person:focus{
+            color: aqua;
+            font: 700;
         }
     </style>
 </head>
 <body>
     <h1>this page is normal</h1>
+
+    <input type="text">
+    <input class="middle-person" type="text">
+    <input type="text">
 </body>
 </html>
