--- a/pseudo.html
+++ b/pseudo.html
@@ -17,6 +17,9 @@
             color: aqua;
             font: 700;
         }
+        a:visited{
+            color: red;
+        }
     </style>
 </head>
 <body>
@@ -25,5 +28,11 @@
     <input type="text">
     <input class="middle-person" type="text">
     <input type="text">
+    <br>
+    <a href="https://web.whatsapp.com/"> whats app </a>
+    <br>
+    <a href="https://www.google.com/"> google</a>
+    <br>
+    <a href="https://www.educative.io/answers/how-to-open-a-link-in-a-new-tab-with-html-and-javascript">new link</a>
 </body>
 </html>
