first last child

--- a/pseudo.html
+++ b/pseudo.html
@@ -20,6 +20,12 @@
         a:visited{
             color: red;
         }
+        li:first-child{
+            color: cadetblue;
+        }
+        li:last-child{
+            background-color: cadetblue;
+        }
     </style>
 </head>
 <body>
@@ -34,5 +40,13 @@
     <a href="https://www.google.com/"> google</a>
     <br>
     <a href="https://www.educative.io/answers/how-to-open-a-link-in-a-new-tab-with-html-and-javascript">new link</a>
+    <br><br><br>
+
+    <ul>
+        <li>shanto</li>
+        <li>kona</li>
+        <li>eshan</li>
+        <li>sigma</li>
+    </ul>
 </body>
 </html>
