pseudo element add

--- a/pseudo.html
+++ b/pseudo.html
@@ -21,10 +21,23 @@
             color: red;
         }
         li:first-child{
-            color: cadetblue;
+            color: rgb(77, 149, 151);
         }
         li:last-child{
+            background-color: rgb(4, 35, 36);
+        }
+        li:nth-child(2n){
+            background-color: palevioletred;
+        }
+        h3::before{
+            content: 'Hello  ';
+            font-weight: 700;
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             background-color: cadetblue;
+        }        
+        h3::after{
+            content: 'Bye';
+            background-color: aqua;
         }
     </style>
 </head>
@@ -35,6 +48,13 @@
     <input class="middle-person" type="text">
     <input type="text">
     <br>
+    <h3>Something new</h3>
+    <h3>Something new</h3>
+    <h3>Something new</h3>
+    <h3>Something new</h3>
+    <h3>Something new</h3>
+    <h3>Something new</h3>
+    <br>
     <a href="https://web.whatsapp.com/"> whats app </a>
     <br>
     <a href="https://www.google.com/"> google</a>
@@ -43,6 +63,14 @@
     <br><br><br>
 
     <ul>
+        <li>shanto</li>
+        <li>kona</li>
+        <li>eshan</li>
+        <li>sigma</li>
+        <li>shanto</li>
+        <li>kona</li>
+        <li>eshan</li>
+        <li>sigma</li>
         <li>shanto</li>
         <li>kona</li>
         <li>eshan</li>
