--- a/pseudo.html
+++ b/pseudo.html
@@ -32,10 +32,11 @@
         h3::before{
             content: 'Hello  ';
             font-weight: 700;
+            font-size: 11px;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
             background-color: cadetblue;
         }        
-        h3::after{
+        .special::after{
             content: 'Bye';
             background-color: aqua;
         }
@@ -50,10 +51,10 @@
     <br>
     <h3>Something new</h3>
     <h3>Something new</h3>
+    <h3 class="special">Something new</h3>
     <h3>Something new</h3>
     <h3>Something new</h3>
-    <h3>Something new</h3>
-    <h3>Something new</h3>
+    <h3 class="special">Something new</h3>
     <br>
     <a href="https://web.whatsapp.com/"> whats app </a>
     <br>
