--- a/position.html
+++ b/position.html
@@ -6,6 +6,16 @@
     <title>Position</title>
 </head>
 <body>
-    
+    <section>
+        <h2>My first Position</h2>
+        <h2>My Second Position</h2>
+        <h2>My Third Position</h2>
+    </section>
+
+    <section class="swimming">
+        <div><img src="images/boy.svg" alt=""></div>
+        <div><img src="images/ring.svg" alt=""></div>
+        <div><img src="images/ring.svg" alt=""></div>
+    </section>
 </body>
 </html>
